# prad2decoder

./: CMakeLists.txt  README.md
analysis/: CMakeLists.txt  README.md
analysis/include/: ConfigSetup.h  MatchingTools.h  PhysicsTools.h  Replay.h  gain_factor.h
analysis/pyscripts/: _common.py  benchmark_hycal_timing.py  gem_hycal_matching.py  study_hycal_timing.py
analysis/scripts/: cosmic_eq_analyze.py  cosmic_eq_distribution.py  cosmic_eq_propose.py  gem_hycal_matching.C  plot_hits_at_hycal.C  script_helpers.h  tagger_hycal_correlation.C
analysis/src/: MatchingTools.cpp  PhysicsTools.cpp  Replay.cpp
analysis/tools/: analysis_example.cpp  calib_5by5.cpp  cosmic_lg.cpp  cosmic_test.cpp  det_calib.cpp  epCalib.cpp  gain_monitor.cpp  gain_replay.cpp  matching.cpp  quick_check.cpp  refGain_produce.cpp  replay_gainCorr.cpp  replay_hycalRecon.cpp  replay_lms.cpp  replay_rawdata.cpp  replay_rawdata_m.cpp  replay_recon.cpp  replay_recon_m.cpp  sim2replay.cpp
calibration/: README.md  gain_scanner.py  hycal_gain_equalizer.py  hycal_snake_scan.py  paths.json  pmt_response.py  scan_path_editor.py  scan_utils.py
calibration/docs/: hycal_gain_equalizer_wiki.txt  hycal_snake_scan_wiki.txt
cosmic_gain/: new_vset.C  vset_iter0.json
database/: config.json  daq_config.json  gem_map.json  hist_config.json  monitor_config.json  prad_daq_config.json  reconstruction.json  reconstruction_config.json  tagger_map.json
database/calibration/: 2p1_general.json  adc_to_mev_factors_cosmic.json  calibration_config.json  calibration_factor_0.json  calibration_factor_0_2.json  calibration_factor_0_3.json  calibration_factor_fadc_0p7.json  det_position_calib.json
database/daq_cnf/: adchycal_gain.cnf  adchycal_gain_onlyscint.cnf  adchycal_gain_v4.cnf  adchycal_mask_LG1.cnf
database/gain_factor/: prad_024484_LMS.root
database/gain_factor/gain_correction/: prad_024512_gain_corr.root
database/gain_factor/ref_gain/: prad_024512_LMS_hists.root
database/gem_test/: gem_event_105.json  gem_event_108.json  gem_event_1109.json  gem_event_117.json  gem_event_121.json  gem_event_1272.json  gem_event_129.json  gem_event_131.json  gem_event_1323.json  gem_event_137.json  gem_event_1417.json  gem_event_142.json  gem_event_1482.json  gem_event_151.json  gem_event_1549.json  gem_event_161.json  gem_event_1708.json  gem_event_1718.json  gem_event_1721.json  gem_event_1758.json  gem_event_1783.json  gem_event_1972.json  gem_event_2024.json  gem_event_2118.json  gem_event_2134.json  gem_event_225.json  gem_event_2732.json  gem_event_2790.json  gem_event_29.json  gem_event_2982.json  gem_event_3100.json  gem_event_3290.json  gem_event_3484.json  gem_event_4069.json  gem_event_425.json  gem_event_4450.json  gem_event_4571.json  gem_event_46.json  gem_event_47.json  gem_event_48.json  (+20 more)
database/prad1/: prad_config.json
database/runinfo/: 2p1_general.json  2p2_general.json  general.json
docs/: API.md
docs/analysis_notes/: gain_correction.md
docs/gem/: gem_map_prad2_hallB.txt
docs/rols/: banktags.md  clonbanks_20260406.xml
docs/technical_notes/hycal_clustering/: hycal_clustering.md
docs/technical_notes/hycal_clustering/plots/: bench_024386_w16.tsv  bench_024386_w16cal.tsv  bench_024386_w16cal_excl15_20.tsv  bench_024386_w16cal_excl15_20_cb.tsv  bench_024386_w16cal_excl15_20_cbpeak.tsv  bench_024386_w16cal_excl16_19.tsv  bench_024386_w8.tsv  bench_024386_w8cal.tsv
docs/technical_notes/hycal_clustering/scripts/: plot_hycal_clustering.py
gem/: README.md  gem_event_viewer.py
include/: Fadc250Data.h
prad2_monitor/: main.cpp
prad2ana/include/: GemCluster.h  GemSystem.h
prad2ana/src/: GemCluster.cpp  GemSystem.cpp  HyCalSystem.cpp
prad2dec/: CMakeLists.txt
prad2dec/include/: DaqConfig.h  EvChannel.h  Fadc250Data.h  SyncData.h  VtpData.h  VtpDecoder.h  load_daq_config.h
prad2dec/src/: EvChannel.cpp  VtpDecoder.cpp
prad2det/: CMakeLists.txt
prad2det/include/: DetectorTransform.h  EventData.h  EventData_io.h  GemSystem.h  HyCalCluster.h  HyCalSystem.h  RunInfoConfig.h
prad2det/src/: GemSystem.cpp  HyCalCluster.cpp  HyCalSystem.cpp  PipelineBuilder.cpp  TrackMatcher.cpp
python/: CMakeLists.txt  bind_dec.cpp  bind_det.cpp  prad2py.cpp
resources/: cluster.js  config.js  epics.js  filebrowser.js  filter_dialog.js  gem.js  gem_apv.js  online.js  physics.js  report.js  viewer.css  viewer.html  viewer.js  waveform.js
scripts/: README.md  ep_calib_viewer.py  gem_cluster_view.py  gem_layout.py  hycal_event_viewer.py  hycal_gain_monitor.py  hycal_geoview.py  hycal_map_builder.py  hycal_pedestal_monitor.py  hycal_scaler_map.py  hycal_snake_scan.py  replay_viewer.py  setup.csh  setup.sh  tagger_viewer.py  tdc_viewer.py  trigger_mask_editor.py  waveform_viewer.py
scripts/daq_tool/: fadc_gain_config.py
scripts/dev_tool/: convert_gem_map.py
scripts/shell/: start_prad2mon
src/: Fadc250Decoder.cpp  app_state.cpp  app_state.h  app_state_api.cpp  app_state_filter.cpp  app_state_init.cpp  data_source.cpp  data_source.h  evc_monitor.cpp  evc_viewer.cpp  evio_data_source.cpp  evio_data_source.h  load_daq_config.h  prad2_server.cpp  prad2evviewer.cpp  root_data_source.cpp  root_data_source.h  viewer_server.cpp  viewer_server.h  viewer_server_et.cpp  viewer_server_http.cpp  viewer_utils.h
test/: README.md  et_feeder.cpp  evio_dump.cpp  gem_dump.cpp  livetime.cpp  test_main.cpp
